--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.jruby.joni</groupId>
   <artifactId>joni</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.3</version>
+  <version>1.1.0</version>
   <name>Joni</name>
   <description>
     Java port of Oniguruma: http://www.geocities.jp/kosako3/oniguruma
@@ -72,6 +72,11 @@
   </developers>
 
   <dependencies>
+    <dependency>
+       <groupId>org.jruby.jcodings</groupId>
+       <artifactId>jcodings</artifactId>
+       <version>1.0.0</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
