--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@
           <plugin>
              <groupId>org.jacoco</groupId>
              <artifactId>jacoco-maven-plugin</artifactId>
+             <version>0.8.0</version>
              <configuration>
                 <excludes>
                 </excludes>
