--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
        <groupId>org.jruby.jcodings</groupId>
        <artifactId>jcodings</artifactId>
-       <version>1.0.27-SNAPSHOT</version>
+       <version>1.0.27</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
