Open-ended activation for JDK 9 on up.

--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
     <profile>
       <id>release-on-9</id>
       <activation>
-        <jdk>9</jdk>
+        <jdk>[9,)</jdk>
       </activation>
       <build>
         <plugins>
