--- a/pom.xml
+++ b/pom.xml
@@ -76,12 +76,14 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
         <executions>
           <execution>
             <id>default-compile</id>
             <configuration>
-              <source>1.7</source>
-              <target>1.7</target>
               <excludes>
                 <exclude>module-info.java</exclude>
               </excludes>
