--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
   </parent>
 
   <issueManagement>
-    <system>JIRA</system>
-    <url>http://jira.codehaus.org/browse/JRUBY</url>
+    <system>GitHub</system>
+    <url>https://github.com/jruby/joni/issues</url>
   </issueManagement>
 
   <scm>
